# fake-star-detector

./: README.md  docker-compose.yaml  pyproject.toml  setup.py
dbt_project/models/complex_detector/: schema.yml
docker/: Dockerfile
fake_star_detector/: config.py  delete.py  fetch.py  validate.py
fake_star_detector_tests/: test_delete.py  test_validate.py
