[tool.poetry]
name = "fake_star_detector"
version = "0.2.0"
description = "Complete python library to fetch and validate stars. Based on dagster/fake-stars"
authors = ["Eric Norman"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = "^3.11.8"
pandas = "^2.2.1"
pygithub = "^2.2.0"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^8.0.1"
